--- a/README.org
+++ b/README.org
@@ -1,5 +1,12 @@
 * lslock
-* Development
-** Prerequisites
-- Make sure you have vagrant installed. Then run =vagrant up= in the cloned repository. You are now able to connect with =ssh vagrant@172.25.12.6:22=, password =vagrant= and find the contents of this repository at =/vagrant/=. Activate the virtual env with =. /vagrant/venv/bin/activate= and you're set.
-** Running tests
+=lslock= comes with two executables, =lslock= and =lslock-test=.
+=lslock= checks a given directory (and subdirectories) for any locked files and outputs them.
+=lslock-test= locks a given number of files in a given directory and is used to check the validity of =lslock=.
+See =lslock --help= or =lslock-test --help= for parameters.
+** Development
+*** Prerequisites
+- Make sure you have vagrant installed. Then run =vagrant up= in the cloned repository. You are now able to connect with =ssh vagrant@172.25.12.6:22=, password =vagrant= and find the contents of this repository at =/vagrant/=.
+
+ Create the virtual env with =virtualenv /vagrant/venv= and activate it with =. /vagrant/venv/bin/activate=. Install the dependencies via =pip install -e /vagrant/=.
+*** Running tests
+You can run the tests via =nosetests lslock.py=.
