--- a/README.org
+++ b/README.org
@@ -15,6 +15,11 @@ See =lslock --help= or =lslock-test --help= for parameters.
 =lslock= was tested on Ubuntu 12.04, but should work on Linux with Python >= 2.7.
 
 For a leaner method of testing for locks on specific files, check out [[https://linux.die.net/man/8/lsof][lsof]].
+** Installation
+#+BEGIN_SRC sh
+cd <path-to-repo>
+pip install -e .
+#+END_SRC
 ** Development
 *** Prerequisites
 - Make sure you have vagrant installed. Then run =vagrant up= in the cloned repository. You are now able to connect with =ssh vagrant@172.25.12.6:22=, password =vagrant= and find the contents of this repository at =/vagrant/=.
